--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dropdown_button2: ^2.3.9
+  path_provider: ^2.0.11
+  sqflite: ^2.3.3+2
 
 dev_dependencies:
   flutter_test:
